SF-813 - Lines are not wrapping correctly in texts - Moved box-decoration-break from `usx-para-contents` to `usx-segment` and change to `clone` - Add additional padding to `usx-segment` to display nicely when it wraps - Changed `usx-verse` to be `display: inline-block` to ensure verses aren't forcing a line break when text is being added

--- a/src/SIL.XForge.Scripture/ClientApp/src/_text.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/_text.scss
@@ -123,9 +123,6 @@ p[dir='rtl'] {
         border-radius: 4px;
         display: inline;
         box-sizing: border-box;
-
-        box-decoration-break: slice;
-
         color: rgba(0, 0, 0, 0.8);
         background-color: white;
       }
